<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_layout"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".listview.PropertyListView">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/list_property" android:id="@+id/drop_constraint"
            android:layout_marginTop="8dp">

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/drop_card"
                android:visibility="gone"
                style="@style/CustomCardViewStyle"
...
            app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/add_property"
            android:id="@+id/floating_action_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:backgroundTint="@color/colorGold"
            app:tint="@color/colorWhite"
...
