...
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_drawer"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        tools:context="com.openclassrooms.realestatemanager.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
...
                app:layout_constraintTop_toBottomOf="@+id/toolbar_main"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:theme="@style/NavigationDrawerStyle"
            android:layout_gravity="start"
            app:itemTextColor="@color/colorGray"
            app:itemIconSize="40dp"
...
