...
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme1"
        android:background="@color/colorGold" android:id="@+id/login_activity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
...
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@drawable/underline" android:layout_marginTop="8dp"/>
                <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/login_card_height"
                        android:id="@+id/mail_sign_in"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/login_margin_top"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
...
